Fix overlap issues on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,3 +145,15 @@ footer {
 .btn-link:hover, .btn-link:focus {
   color: #ffffff;
 }
+
+@media screen and (max-width: 768px) {
+
+  #intro, #map, #trends-header, #tracker, #sidebar, #trends
+  {
+    height: unset;
+  }
+
+  #map {
+    height: 80vh;
+  }
+}
